# test-stanza-models

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
rominf_stanza_common/: pyproject.toml
rominf_stanza_fi/: pyproject.toml
rominf_stanza_fi_model_backward_charlm_conll17/: MANIFEST.in  pyproject.toml
rominf_stanza_fi_model_forward_charlm_conll17/: MANIFEST.in  pyproject.toml
rominf_stanza_fi_model_lemma_tdt_nocharlm/: MANIFEST.in  pyproject.toml
rominf_stanza_fi_model_mwt_tdt/: MANIFEST.in  pyproject.toml
rominf_stanza_fi_model_pos/: pyproject.toml
rominf_stanza_fi_model_pos_tdt_charlm/: MANIFEST.in  pyproject.toml
rominf_stanza_fi_model_pretrain_conll17/: MANIFEST.in  pyproject.toml
rominf_stanza_fi_model_tokenize_ftb/: MANIFEST.in  pyproject.toml
rominf_stanza_fi_model_tokenize_tdt/: MANIFEST.in  pyproject.toml
rominf_stanza_fi_processor_backward_charlm_conll17/: MANIFEST.in  pyproject.toml
rominf_stanza_fi_processor_forward_charlm_conll17/: MANIFEST.in  pyproject.toml
rominf_stanza_fi_processor_lemma_tdt_nocharlm/: MANIFEST.in  pyproject.toml
rominf_stanza_fi_processor_mwt_tdt/: MANIFEST.in  pyproject.toml
rominf_stanza_fi_processor_pos/: pyproject.toml
rominf_stanza_fi_processor_pos_tdt_charlm/: MANIFEST.in  pyproject.toml
rominf_stanza_fi_processor_pretrain_conll17/: MANIFEST.in  pyproject.toml
rominf_stanza_fi_processor_tokenize_ftb/: MANIFEST.in  pyproject.toml
rominf_stanza_fi_processor_tokenize_tdt/: MANIFEST.in  pyproject.toml
