[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rominf-spacy-core-web-trf"
version = "3.7.3"
dependencies = [
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889"
]
