[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rominf-spacy-en-core-web-trf"
version = "3.7.3"
dependencies = [
    "en-core-web-trf @ https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.7.3/en_core_web_trf-3.7.3-py3-none-any.whl#sha256=f72abb34bdf174876bd4267b29b2501677e605e0a251fdc56c163003182ed68b"
]
