[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rominf-stanza-fi"
version = "1.8.0"

[project.optional-dependencies]
default = [
    "rominf-stanza-fi-processor-tokenize-tdt==1.8.0",
    "rominf-stanza-fi-processor-mwt-tdt==1.8.0",
    "rominf-stanza-fi-processor-lemma-tdt-nocharlm==1.8.0",
    "rominf-stanza-fi-processor-pos-tdt-charlm==1.8.0",
]

