[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rominf-stanza-fi"
version = "1.8.0"

dependencies = [
    "rominf-stanza-fi-model-tokenize-tdt==1.8.0",
    "rominf-stanza-fi-model-mwt-tdt==1.8.0",
    "rominf-stanza-fi-model-lemma-tdt-nocharlm==1.8.0",
    "rominf-stanza-fi-model-pos-tdt-charlm==1.8.0",
]

