[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rominf-stanza-fi-processor-pos-tdt-charlm"
version = "1.8.0"
dependencies = [
    "rominf-stanza-fi-processor-pretrain-conll17==1.8.0",
    "rominf-stanza-fi-processor-forward-charlm-conll17==1.8.0",
    "rominf-stanza-fi-processor-backward-charlm-conll17==1.8.0",
]

[tool.setuptools.packages.find]
where = ["data"]
